# exploration_plotting

./: LICENSE  README.md  exploration_plotting.py  pyproject.toml  requirements.txt  rewritune_plots.sh
exploration_plotting/: all.py  exploration_plotting.py  facet.py  performance_evolution.py  performance_evolution_budget.py  performance_evolution_grouped.py  plotting_configuration.py  scatter.py  scatter_pe.py  speedup.py  speedup_playground.py  speedup_stacking.py  speedup_tuning.py  speedup_tuning_playground.py  stats.py  tuning_budget_analysis.py  tuning_ranges.py  tuning_ranges_playground.py  util.py  violin.py
tuning_plotting/: grouped_order_performance_evolution.py  order_ranges.py  order_statistics.py  plotting_configuration.py  util.py
