[project]
name = "exploration_plotting"
version = "0.1.0"
description = "A Python Plotting Collection"
authors = [{ name = "Johannes Lenfers", email = "j.lenfers@uni-muenster.de" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.23.5",
    "matplotlib>=3.7.2",
    "plotly>=5.22.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "kaleido>=0.2.1",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/johanneslenfers/exploration_plotting"

[tool.setuptools]
packages = [
"exploration_plotting",
]

[tool.setuptools.package-data]
"exploration_plotting" = []
